service.yaml
kind: Service
apiVersion: v1
metadata:
  name: metadata-checker
  namespace: default
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: metadata-checker
