ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metadata-checker
  namespace: default
  annotations:
    ingress.kubernetes.io/ssl-redirect: 'false'
spec:
  tls:
  - hosts:
      - metadatachecker.tkg.research.chop.edu
    secretName: chop-tkg-wildcard
  rules:
  - host: metadatachecker.tkg.research.chop.edu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: metadata-checker
            port:
              number: 80
